Another attempt to fix letter-spacing bug on iOS

--- a/app/assets/stylesheets/themes/_yesno.sass
+++ b/app/assets/stylesheets/themes/_yesno.sass
@@ -101,34 +101,42 @@ pre
 =heading-xxl
   +heading-xxl-default
   @content
+  font-weight: 500
 
 =heading-xl
   +heading-xl-default
   @content
+  font-weight: 500
 
 =heading-lg
   +heading-lg-default
   @content
+  font-weight: 500
 
 =heading-md
   +heading-md-default
   @content
+  font-weight: 500
 
 =heading-rg
   +heading-rg-default
   @content
+  font-weight: 500
 
 =heading-sm
   +heading-sm-default
   @content
+  font-weight: 500
 
 =heading-xs
   +heading-xs-default
   @content
+  font-weight: 500
 
 =heading-xxs
   +heading-xxs-default
   @content
+  font-weight: 500
 
 h1, h2, h3, h4, h5, h6
   font-family: $heading-font-family
